<resources>
    <string name="app_name">අපේ දේ</string>
    <string name="hello_you">Hello You!</string>
    <string name="sub_title">
        Join with our community!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_img">illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login</string>
    <string name="Login_sub_title">
        <font color="#00C9BB"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_email">Your email</string>
    <string name="login_password">Your Password</string>
    <string name="login_forgot_pw">Forgot Password?</string>

    <string name="login_havent_account">
        I don\'t have an account <font color="#00C9BB"><b>Register</b></font>
    </string>

    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C9BB"><b>Register</b></font> to get started with the app.
    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">your email</string>
    <string name="register_username">Your username</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_address">Your Address</string>
    <string name="register_contact">Your Contact Number</string>

    <string name="register_have_account">
        I already have an account <font color="#00C9B8"><b>Login</b></font>
    </string>

    // Hello Seller page
    <string name="create_your_own_store">Create Your Own Store</string>
    <string name="our_aim">"<b>Our aim</b> is to empower local entrepreneurs by providing them with the tools and resources they need to start and grow their businesses from the comfort of their homes."</string>
    <string name="visit_store">Visit Your Own Store</string>
</resources>